fix: article is invisible when "animate: false"

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -23,6 +23,11 @@
     margin: .5em auto;
   }
 }
+
+if !hexo-config("animate")
+    .article
+        opacity 1
+
 @-webkit-keyframes cd-bounce-1 {
   0% {
     opacity: 0;
